--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-    <center>毕业设计</center>
-    <script src="http://localhost:8080/js/vendors.js"></script>
-    <script src="http://localhost:8080/js/index.js"></script>
-    </body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>mini-code-camp-admin</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
