添加Vue处理课程列表和课程详情

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>mini-code-camp-admin</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="//cdn.bootcss.com/codemirror/5.25.0/codemirror.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/codemirror/5.25.0/theme/monokai.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/codemirror/5.25.0/addon/lint/lint.min.css" rel="stylesheet">
+</head>
+<body>
+<div id="app"></div>
+<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="//cdn.bootcss.com/handlebars.js/4.0.6/handlebars.min.js"></script>
+<script src="//cdn.bootcss.com/lodash.js/4.17.4/lodash.min.js"></script>
+<script src="//cdn.bootcss.com/chai/4.0.0-canary.1/chai.min.js"></script>
+<script src="//cdn.bootcss.com/codemirror/5.25.0/codemirror.min.js"></script>
+<script src="//cdn.bootcss.com/codemirror/5.25.0/mode/xml/xml.min.js"></script>
+<script src="//cdn.bootcss.com/codemirror/5.25.0/mode/javascript/javascript.min.js"></script>
+<script src="//cdn.bootcss.com/codemirror/5.25.0/mode/css/css.min.js"></script>
+<script src="//cdn.bootcss.com/codemirror/5.25.0/mode/htmlmixed/htmlmixed.min.js"></script>
+<script src="//cdn.bootcss.com/codemirror/5.25.0/addon/edit/matchbrackets.min.js"></script>
+<script src="//cdn.bootcss.com/codemirror/5.25.0/addon/lint/lint.min.js"></script>
+<!-- built files will be auto injected -->
+</body>
 </html>
